# learning

./: .gitignore
algorithms/cormen/: Makefile  exercises  include.rar  test
algorithms/cormen/data_structures/: doubly_linked_list.c  linked_list.c  queue.c  red_black.c  stack.c
algorithms/cormen/dynamic_programming/: Makefile
algorithms/cormen/graph/: :w  a.out  another_topological_sort.cpp  dfs.cpp  diameter.cpp  edge_type.cpp  fighters.cpp  graph_components.cpp  path.cpp  single_test.cpp  strongly_connected.cpp  topological_sort.cpp  undir_uncycled.cpp
algorithms/cormen/include/: sort.h  test.h
algorithms/cormen/max_subarray/: a.out  main.c
algorithms/cormen/min_max/: main.c
algorithms/cormen/order_statistic/: nfirst_elements.c  randomized  randomized.c
algorithms/cormen/range/: fuzzy_sort  fuzzy_sort.c
algorithms/cormen/sort/: Makefile
algorithms/cormen/src/: counting_sort.c  foo_list.c  insert_sort.c  main.c  pyramid_sort.c  quick_sort.c  (+3 more)
algorithms/knuth/: Makefile  test
books/asm/: mayers-g-iskusstvo-testirovaniya-programm_4fd709e30d2.djvu
books/micro/: Belov_ustroistva_mk.djvu
books/misc/: Braun_Zapomnit-vsyo-Usvoenie-znaniy-bez-skuki-i-zubrezhki.a11rPw.433285.fb2
golang/: async.go  dyn_fib_test.go  fib.go  findmin.go  fizzbuzz.go  functions.go  oddGenerator.go  pointer.go  rec_fib_test.go  structures.go
opengl/: init_proj.sh
opengl/1_8/: CMakeLists.txt
opengl/1_8/imgs/: container.tga
opengl/1_8/shaders/: base.frag  base.vert
opengl/1_8/src/: main.cpp
opengl/1_9/: CMakeLists.txt
opengl/1_9/include/: camera.h
opengl/1_9/shaders/: base.frag  base.vert
opengl/1_9/src/: camera.cpp  main.cpp  shader.cpp
opengl/cube_of_cubes/: CMakeLists.txt
opengl/cube_of_cubes/include/: camera.h  renderer.h  shader.h  shader_program.h  shape.h  texture.h
opengl/cube_of_cubes/shaders/: shader.frag  shader.vert
opengl/cube_of_cubes/src/: camera.cpp  main.cpp  renderer.cpp  shader.cpp  shader_program.cpp  shape.cpp  texture.cpp
(+137 files in other folders)
